# iii_hackathon

./: IMPLEMENTATION.md  README.md  changes.md  package-lock.json  render.yaml  vercel.json
backend/: .env  auth.py  config.py  database.py  main.py  models.py  novatrade.db  out.json  pyproject.toml  requirements.txt  seed.py  yf_output.txt
backend/routers/: auth_router.py  copilot_router.py  cron_router.py  market_router.py  news_router.py  optimization_router.py  orders_router.py  trade_router.py  watchlist_router.py
backend/services/: condition_monitor.py  copilot_service.py  market_service.py  optimization_service.py  risk_scoring_service.py  sentiment_service.py  trade_service.py
backend/tools/: __init__.py  analyze_portfolio.py  analyze_risk.py  cancel_order.py  create_conditional_order.py  edit_conditional_order.py  execute_trade.py  get_recent_news.py  get_sentiment.py  get_stock_info.py  optimize_portfolio.py  scan_market.py  set_price_alert.py  tool_executor.py  tool_schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/common/: EmptyState.jsx  RiskGauge.jsx  SentimentBadge.jsx  StatCard.jsx
frontend/src/components/copilot/: ChatMessage.jsx  CopilotPanel.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useMarketData.js  usePortfolio.js
frontend/src/lib/: utils.js
frontend/src/pages/: DashboardPage.jsx  HistoryPage.jsx  HoldingsPage.jsx  LoginPage.jsx  NewsPage.jsx  OptimizationPage.jsx  TradePage.jsx  WatchlistPage.jsx
(+20 files in other folders)
