[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "packaging>=26.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "pyportfolioopt>=1.5.0",
    "python-jose[cryptography]>=3.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.0",
]
